--- a/codigo/public/assets/css/seprotegernainternet.css
+++ b/codigo/public/assets/css/seprotegernainternet.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f0f4f8;
+    background-color: #dde8f0;
   margin: 0;
   padding: 20px;
 }
