--- a/codigo/public/modulos/secaodetuturial/styles.css
+++ b/codigo/public/modulos/secaodetuturial/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #c5d8e2;
+   background-color: #bdd9ec;
     color: #333;
 }
 
