--- a/codigo/public/assets/css/quiz.css
+++ b/codigo/public/assets/css/quiz.css
@@ -9,9 +9,13 @@ body {
   background-color: #d9f0fb;
   color: #1a1a1a;
   /*display: block;*/
-  justify-content: center;
-  align-items: center;
+  /*justify-content: center;
+  align-items: center;*/
   min-height: 100vh;
+}
+
+.header-spacer {
+  height: 110px; /* ajuste conforme a altura real do seu header/menu */
 }
 
 .container {
@@ -21,6 +25,11 @@ body {
   width: 95%;
   max-width: 600px;
   padding: 30px;
+  margin: 0 auto;         /* centraliza horizontalmente */
+  margin-top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;    /* centraliza conteúdo interno */
 }
 
 header {
