--- a/codigo/public/modulos/jogo da memoria/jogo da memoria/public/jogodamemoria.css
+++ b/codigo/public/modulos/jogo da memoria/jogo da memoria/public/jogodamemoria.css
@@ -12,7 +12,7 @@ body {
   padding: 20px;
   text-align: center;
   min-height: 100vh;
-  display: flex;
+  /*display: flex;*/
   justify-content: center;
   align-items: flex-start;
   animation: fadeInBody 1.2s;
