--- a/codigo/public/assets/css/quiz.css
+++ b/codigo/public/assets/css/quiz.css
@@ -30,12 +30,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;    /* centraliza conteúdo interno */
+ margin-top: 280px;
 }
 
 header {
   background-color: #0288d1;
   padding: 20px;
-  border-radius: 14px;
+
   text-align: center;
   color: white;
   margin-bottom: 20px;
